# TI-MSPM0-Template

./: .gitignore  CMakeLists.txt  README.md
.cmake/: link_syscfg_libs.cmake
.cmake/presets/: CMakePresets.json.template
.cmake/template/: CMakePresets.json.template  CMakeUserPresets.json.template  toolchain.clang.cmake.template  toolchain.cmake.template  toolchain.gcc.cmake.template  toolchain.ticlang.cmake.template
.cmake/toolchain/: toolchain.cmake.template
.cmake/user/: CMakeUserPresets.json.template
.cmake/utils/: link_syscfg_libs.cmake
.ti/: TI-MSPM0-Template.syscfg  TI_MSPM0_Template.syscfg  syscfg.bat
.ti/generate/: peripheralPinAssignments.txt  resourceUsageReport.csv
Application/: main.c
Core/Inc/: ti_msp_dl_config.h
Core/Src/: ti_msp_dl_config.c
scripts/: configure.bat  mspm0_chip_db.csv
